--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -7,15 +7,19 @@ jobs:
   stale:
     runs-on: ubuntu-latest
     permissions:
+      contents: write # only for delete-branch option
       issues: write
+      pull-requests: write
     steps:
-      - uses: actions/stale@v4
+      - uses: actions/stale@v8.0.0
         with:
           stale-issue-message: 'This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions.'
-          close-issue-message: 'Please reopen this issue once you add more information and updates here. If this is not the case and you need some help, feel free to seek help by mailing me at "vedeesh6@gmail.com". Thank you for your contributions!'
+          close-issue-message: 'This issue has been closed. Please reopen this once you add more information and updates here. If this is not the case and you need some help, feel free to seek help by mailing me at "vedeesh6@gmail.com". Thank you for your contributions!'
           stale-pr-message: 'This pull request has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs. Thank you for your contributions.'
-          close-pr-message: 'Please reopen this pull request once you commit the changes requested or make improvements on the code. If this is not the case and you need some help, feel free to seek help by mailing me at "vedeesh6@gmail.com". Thank you for your contributions!'
+          close-pr-message: 'This pull request has been closed. Please reopen this once you commit the changes requested or make improvements to the code. If this is not the case and you need some help, feel free to seek help by mailing me at "vedeesh6@gmail.com". Thank you for your contributions!'
           exempt-issue-labels: 'dont-close'
           exempt-pr-labels: 'dont-close'
-          days-before-stale: 14
-          days-before-close: 3
+          days-before-pr-stale: 14
+          days-before-issue-stale: 60
+          days-before-pr-close: 3
+          days-before-issue-close: 7
