--- a/.github/workflows/Java_build.yml
+++ b/.github/workflows/Java_build.yml
@@ -5,11 +5,7 @@
 
 name: Java CI with Maven
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -17,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4.1.1
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
